<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/host_page"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background = "@drawable/host_page">

    <TextView
        android:id="@+id/text_dashboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="20dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="109dp"
        android:layout_height="118dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="151dp"
        android:layout_marginLeft="151dp"
        android:layout_marginTop="18dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:color="#114279"
        android:contentDescription="@string/todo"
        android:cropToPadding="true"
        android:padding="0dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profile" />

    <Button
        android:id="@+id/loginConfirm"
        android:layout_width="256dp"
        android:layout_height="52dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="77dp"
        android:layout_marginLeft="77dp"
        android:layout_marginTop="463dp"
        android:background="@drawable/login"
        android:text="@string/log_out"
        android:textAppearance="@style/log_in2" />

    <TextView
        android:id="@+id/current_session"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="127dp"
        android:layout_marginStart="127dp"
        android:layout_marginTop="225dp"
        android:gravity="top"
        android:text="@string/current_session"
        android:textAppearance="@style/current_session" />

    <TextView
        android:id="@+id/access_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="140dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="299dp"
        android:gravity="top"
        android:text="@string/access_code"
        android:textAppearance="@style/current_session" />

    <TextView
        android:id="@+id/num_people"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="66dp"
        android:layout_marginStart="66dp"
        android:layout_marginTop="376dp"
        android:gravity="top"
        android:text="@string/num_people"
        android:textAppearance="@style/current_session" />

    <TextView
        android:id="@+id/num_people_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="194dp"
        android:layout_marginLeft="194dp"
        android:layout_marginTop="410dp"
        android:gravity="top"
        android:text="@string/num_people_val"
        android:textAppearance="@style/light_blue" />

    <TextView
        android:id="@+id/access_code_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="164dp"
        android:layout_marginLeft="164dp"
        android:layout_marginTop="329dp"
        android:gravity="top"
        android:text="@string/access_code_val"
        android:textAppearance="@style/light_blue" />

    <TextView
        android:id="@+id/current_session_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="153dp"
        android:layout_marginLeft="153dp"
        android:layout_marginTop="254dp"
        android:gravity="top"
        android:text="@string/current_session_val"
        android:textAppearance="@style/light_blue" />

    <Button
        android:id="@+id/username"
        android:layout_width="197dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="108dp"
        android:layout_marginLeft="108dp"
        android:layout_marginTop="142dp"
        android:background="@drawable/username"
        android:text="@string/username_val"
        android:textAppearance="@style/username" />


</RelativeLayout>